Name: live-sequencer
Version: 0.0
Author: Henning Thielemann and Johannes Waldmann
Category: Sound, Music, GUI
License: GPL
License-file: LICENSE
Cabal-Version: >= 1.2
Tested-With: GHC==6.12.3, GHC==7.2.1
Synopsis: 
   An editor shows a textual description of music (like Haskore), 
   an interpreter is computing the stream of MIDI events, 
   and (that's the main point) the user can change the program on the fly.

Build-Type: Simple

Source-Repository head
   type: git
   location: git://dfa.imn.htwk-leipzig.de/srv/git/seq/

Executable live-sequencer
  hs-source-dirs: src
  Main-is: Console.hs
  GHC-Options: -Wall -threaded
  Build-Depends:
    base>=4, transformers, explicit-exception, parsec, pretty, containers, directory, filepath,
    midi-alsa, midi, alsa-seq, alsa-core, utility-ht

Executable live-sequencer-gui
  hs-source-dirs: src
  Main-is: GUI.hs
  GHC-Options: -Wall -threaded
  Build-Depends:
    base>=4, transformers, explicit-exception, parsec, pretty, containers, directory, filepath,
    wx, wxcore, stm, midi-alsa, midi, alsa-seq, alsa-core, utility-ht
