Name: live-sequencer
Version: 0.0
Author: Henning Thielemann and Johannes Waldmann
Category: Sound, Music, GUI
License: GPL
License-file: LICENSE
Cabal-Version: >= 1.2
Tested-With: GHC==6.12.3, GHC==7.2.1
Synopsis:
   An editor shows a textual description of music (like Haskore),
   an interpreter is computing the stream of MIDI events,
   and (that's the main point) the user can change the program on the fly.

Build-Type: Simple

Source-Repository head
   type: git
   location: git://dfa.imn.htwk-leipzig.de/srv/git/seq/

Executable live-sequencer
  hs-source-dirs: src
  Main-is: Console.hs
  GHC-Options: -Wall -threaded
  Build-Depends:
    transformers >=0.2.2 && <0.3,
    explicit-exception >=0.1.5 && <0.2,
    parsec >=2.1 && <3.2,
    pretty >=1.0 && <1.2,
    midi-alsa >=0.1.1 && <0.2,
    midi >=0.1.5 && <0.2,
    alsa-seq >=0.5 && <0.6,
    alsa-core >=0.5 && <0.6,
    utility-ht >=0.0.6 && <0.1,
    containers >=0.3 && <0.5,
    directory >=1.0 && <1.2,
    filepath >=1.1 && <1.3,
    base >=4.2 && <5

Executable live-sequencer-gui
  hs-source-dirs: src
  Main-is: GUI.hs
  GHC-Options: -Wall -threaded
  Build-Depends:
    wx >=0.12.1 && <0.13,
    wxcore >=0.12.1 && <0.13,
    stm >=2.2 && <2.3,
    transformers >=0.2.2 && <0.3,
    explicit-exception >=0.1.5 && <0.2,
    parsec >=2.1 && <3.2,
    pretty >=1.0 && <1.2,
    midi-alsa >=0.1.1 && <0.2,
    midi >=0.1.5 && <0.2,
    alsa-seq >=0.5 && <0.6,
    alsa-core >=0.5 && <0.6,
    utility-ht >=0.0.6 && <0.1,
    containers >=0.3 && <0.5,
    directory >=1.0 && <1.2,
    filepath >=1.1 && <1.3,
    base >=4.2 && <5
